<resources>
    <string name="app_name">Simple News App</string>

    <!--Toolbar title-->
    <string name="title_popular_news">Popular Articles</string>
    <string name="title_local_news">Local Top Headlines</string>
    <string name="title_latest_news">World Latest News</string>
    <string name="title_category">Categories &amp; More</string>

    <!--Bottom menu strings-->
    <string name="bottom_nav_top_headlines">News Home</string>
    <string name="bottom_nav_popular_articles">Popular Articles</string>
    <string name="bottom_nav_local_news">Local News</string>
    <string name="bottom_nav_more">More</string>

    <!--Top Setting menu strings-->
    <string name="top_menu_setting">My Account &amp; Settings</string>
    <string name="top_menu_languages">Languages</string>
    <string name="top_menu_categories">Categories</string>
    <string name="top_menu_search">Search</string>

    <string name="settings_title_wifi">Use Wi-Fi (Default)</string>
    <string name="settings_description_wifi">Allow user to enable or disable Wi-Fi</string>
    <string name="settings_title_mobile_data">Use Cellular Data</string>
    <string name="settings_description_mobile_data">Allow user to enable or disable mobile network</string>
    <!--<string name="settings_title_font_size">Font Size</string>-->
    <string name="settings_description_font_size">Allow user to change text size</string>
    <string name="settings_title_font">Font</string>
    <string name="settings_description_font">Allow user to change text font</string>

    <!--Search bar-->
    <string name="search_hint">Please type in a keyword...</string>

    <!--Article Activity-->
    <string name="article_author">Author</string>
    <string name="article_button_continue_reading">Go to source page</string>
    <string name="article_content_unavailable">Sorry! The content of this article is unavailable for now.\nPlease tap on the GO TO SOURCE PAGE button below to read more</string>
    <string name="article_author_not_available">Author Not Available</string>

    <!--Login Activity-->
    <string name="login_with_google">Sign in with Google</string>
    <string name="login_title">User Sign In</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <!--No content layout-->
    <string name="no_result_found">No result found</string>
    <string name="please_refresh">Network connection failed.\nNo mobile data or Wifi signal detected. Please try to reconnect.</string>
    <string name="button_refresh">Refresh</string>

    <!--Local Fragment-->
    <string name="local_location_update">Location update</string>
    <string name="local_rationale_msg">Without this permission the APP is unable to display contents on this page.
                        Are you sure you want to deny this permission?</string>
    <string name="local_rationale_title">Location permission denied</string>
    <string name="local_permission_denied">location Permission Denied</string>
    <string name="local_enable_access_from_settings">Now TAP ME to enable location access from settings</string>

    <string name="local_refresh">Refresh Content</string>

    <!--Home fragment widgets-->
    <string name="button_return_to_top">See new articles</string>

    <!--RecyclerView-->
    <string name="fragment_transition_name">open_img_transition_name</string>

    <!--Image Activity-->
    <string name="img_bottom_nav_share">Share</string>
    <string name="img_bottom_nav_tweet">Tweet</string>
    <string name="img_bottom_nav_facebook">Facebook</string>
    <string name="img_bottom_nav_email">Email</string>
    <string name="img_bottom_nav_download">Download image</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="img_please_sign_in">Sorry, but you also have to sign in before using this feature.</string>

    <string name="facebook_app_id">885032648644877</string>
    <string name="fb_login_protocol_scheme">fb885032648644877</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Permission-->
    <string name="perm_rationale_neg_btn">I\'M SURE</string>
    <string name="perm_rationale_pos_btn">RETRY</string>
    <string name="perm_pos_setting">GO TO SETTINGS</string>
    <string name="perms_neg_not_now">NOT NOW</string>
    <string name="perm_write_external_storage_denied_title">Write External Storage Permission Denied</string>
    <string name="perm_go_to_settings_msg">Now you have to enable this permission from settings. TAP on GO TO SETTINGS,
        find the Permissions tab to enable this permission. Then, tap refresh button or relevant button</string>
    <string name="perm_rationale_external_storage_msg">You have to allow this permission to enable the image downloading feature.</string>
    <string name="perm_tap_to_allow_location">TAP me to allow location permission, then try again</string>

    <!--Date time and others-->
    <string name="date_time_today">Today at</string>
    <string name="date_time_yesterday">Yesterday at</string>
    <string name="share_via">Share Via</string>
    <string name="share_image_via">Share the image via</string>
</resources>
