<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/nav_home"
        android:enabled="true"
        android:title="@string/bottom_nav_top_headlines"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_nav_home"/>
    <item android:id="@+id/nav_popular"
        android:enabled="true"
        android:title="@string/bottom_nav_popular_articles"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_popular"/>
    <item android:id="@+id/nav_local"
        android:enabled="true"
        android:title="@string/bottom_nav_local_news"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_local_news"/>

    <item android:id="@+id/nav_categories"
    android:enabled="true"
    android:title="@string/bottom_nav_more"
    app:showAsAction="ifRoom"
    android:icon="@mipmap/ic_more"/>
</menu>